ref material updates

--- a/glossary/glossary.tex
+++ b/glossary/glossary.tex
@@ -67,7 +67,7 @@
 %\newacronym[description={New Zealand M\={a}ori}]{nzm}{NZM}{New Zealand M\={a}ori}
 %\newacronym[description={Tongan}]{ton}{TON}{Tongan}
 %\newacronym[description={Samoan}]{sam}{SAM}{Samoan}
-\newacronym[description={Genome-wide association study}]{gwas}{GWAS}{genome-wide association study}
+\newacronym[description={Genome-wide association study},plural ={GWASes}]{gwas}{GWAS}{genome-wide association study}
 \newacronym[description={Variance genome-wide association scan}]{vgwas}{vGWAS}{variance genome-wide association scan}
 \newacronym[description={Insertion or deletion}]{indel}{INDEL}{insertion or deletion}
 
@@ -118,7 +118,7 @@
 \newacronym[description={Mende in Sierra Leone}]{msl}{MSL}{Mende in Sierra Leone}
 \newacronym[description={Mexican Ancestry from Los Angeles USA}]{mxl}{MXL}{Mexican Ancestry from Los Angeles USA}
 \newacronym[description={Admixed New Zealand M\={a}ori}]{nad}{NAD}{Admixed New Zealand M\={a}ori}
-\newacronym[description={Caucasians in New Zealand}]{nzc}{NZC}{Caucasians in New Zealand}
+\newacronym[description={Europeans in New Zealand}]{nzc}{NZC}{Europeans in New Zealand}
 \newacronym[description={M\={a}ori in New Zealand}]{nzm}{NZM}{M\={a}ori in New Zealand}
 \newacronym[description={Samoans in New Zealand}]{omn}{OMN}{Samoans in New Zealand}
 \newacronym[description={Peruvians from Lima Peru}]{pel}{PEL}{Peruvians from Lima Peru}
