--- a/references.bib
+++ b/references.bib
@@ -3841,3 +3841,83 @@ volume = {361},
 year = {2003}
 }
 
+@article{Visscher2012,
+abstract = {The past five years have seen many scientific and biological discoveries made through the experimental design of genome-wide association studies (GWASs). These studies were aimed at detecting variants at genomic loci that are associated with complex traits in the population and, in particular, at detecting associations between common single-nucleotide polymorphisms (SNPs) and common diseases such as heart disease, diabetes, auto-immune diseases, and psychiatric disorders. We start by giving a number of quotes from scientists and journalists about perceived problems with GWASs. We will then briefly give the history of GWASs and focus on the discoveries made through this experimental design, what those discoveries tell us and do not tell us about the genetics and biology of complex traits, and what immediate utility has come out of these studies. Rather than giving an exhaustive review of all reported findings for all diseases and other complex traits, we focus on the results for auto-immune diseases and metabolic diseases. We return to the perceived failure or disappointment about GWASs in the concluding section. {\textcopyright} 2012 The American Society of Human Genetics.},
+author = {Visscher, Peter M. and Brown, Matthew A. and McCarthy, Mark I. and Yang, Jian},
+doi = {10.1016/j.ajhg.2011.11.029},
+file = {:home/murraycadzow/Dropbox/Papers/five{\_}yrs{\_}gwas.pdf:pdf},
+isbn = {1537-6605 (Electronic)$\backslash$r0002-9297 (Linking)},
+issn = {00029297},
+journal = {American Journal of Human Genetics},
+number = {1},
+pages = {7--24},
+pmid = {22243964},
+publisher = {The American Society of Human Genetics},
+title = {{Five years of GWAS discovery}},
+url = {http://dx.doi.org/10.1016/j.ajhg.2011.11.029},
+volume = {90},
+year = {2012}
+}
+
+@article{Yang2017,
+author = {Yang, Jian and Zeng, Jian and Goddard, Michael E. and Wray, Naomi R. and Visscher, Peter M.},
+doi = {10.1038/ng.3941},
+file = {:home/murraycadzow/Dropbox/Papers/ng.3941.pdf:pdf},
+issn = {1061-4036},
+journal = {Nature Genetics},
+number = {9},
+title = {{Concepts, estimation and interpretation of SNP-based heritability.}},
+volume = {49},
+year = {2017}
+}
+
+@article{Fadista2016,
+abstract = {Genome-wide association studies (GWAS) have long relied on proposed statistical significance thresholds to be able to differentiate true positives from false positives. Although the genome-wide significance P-value threshold of 5 × 10(-8) has become a standard for common-variant GWAS, it has not been updated to cope with the lower allele frequency spectrum used in many recent array-based GWAS studies and sequencing studies. Using a whole-genome- and -exome-sequencing data set of 2875 individuals of European ancestry from the Genetics of Type 2 Diabetes (GoT2D) project and a whole-exome-sequencing data set of 13 000 individuals from five ancestries from the GoT2D and T2D-GENES (Type 2 Diabetes Genetic Exploration by Next-generation sequencing in multi-Ethnic Samples) projects, we describe guidelines for genome- and exome-wide association P-value thresholds needed to correct for multiple testing, explaining the impact of linkage disequilibrium thresholds for distinguishing independent variants, minor allele frequency and ancestry characteristics. We emphasize the advantage of studying recent genetic isolate populations when performing rare and low-frequency genetic association analyses, as the multiple testing burden is diminished due to higher genetic homogeneity.European Journal of Human Genetics advance online publication, 6 January 2016; doi:10.1038/ejhg.2015.269.},
+author = {Fadista, Jo{\~{a}}o and Manning, Alisa K. and Florez, Jose C. and Groop, Leif},
+doi = {10.1038/ejhg.2015.269},
+file = {:home/murraycadzow/Dropbox/Papers/ejhg2015269.pdf:pdf},
+isbn = {1476-5438 (Electronic) 1018-4813 (Linking)},
+issn = {14765438},
+journal = {European Journal of Human Genetics},
+number = {8},
+pages = {1202--1205},
+pmid = {26733288},
+title = {{The (in)famous GWAS P-value threshold revisited and updated for low-frequency variants}},
+volume = {24},
+year = {2016}
+}
+
+@article{Spencer2009,
+abstract = {Genome-wide association studies are revolutionizing the search for the genes underlying human complex diseases. The main decisions to be made at the design stage of these studies are the choice of the commercial genotyping chip to be used and the numbers of case and control samples to be genotyped. The most common method of comparing different chips is using a measure of coverage, but this fails to properly account for the effects of sample size, the genetic model of the disease, and linkage disequilibrium between SNPs. In this paper, we argue that the statistical power to detect a causative variant should be the major criterion in study design. Because of the complicated pattern of linkage disequilibrium (LD) in the human genome, power cannot be calculated analytically and must instead be assessed by simulation. We describe in detail a method of simulating case-control samples at a set of linked SNPs that replicates the patterns of LD in human populations, and we used it to assess power for a comprehensive set of available genotyping chips. $\backslash$nOur results allow us to compare the performance of the chips to detect variants with different effect sizes and allele frequencies, look at how power changes with sample size in different populations or when using multi-marker tags and genotype imputation approaches, and how performance compares to a hypothetical chip that contains every SNP in HapMap. A main conclusion of this study is that marked differences in genome coverage may not translate into appreciable differences in power and that, when taking budgetary considerations into account, the most powerful design may not always correspond to the chip with the highest coverage. We also show that genotype imputation can be used to boost the $\backslash$npower of many chips up to the level obtained from a hypothetical ‘‘complete'' chip containing all the SNPs in HapMap. Our results have been encapsulated into an R software package that allows users to design future association studies and our methods provide a framework with which new chip sets can be evaluated.},
+author = {Spencer, C. C A and Su, Zhan and Donnelly, Peter and Marchini, Jonathan},
+doi = {10.1371/journal.pgen.1000477},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Spencer et al. - 2009 - Designing genome-wide association studies Sample size, power, imputation, and the choice of genotyping chip.pdf:pdf},
+isbn = {1553-7404 (Electronic)$\backslash$r1553-7390 (Linking)},
+issn = {15537390},
+journal = {PLoS Genetics},
+mendeley-groups = {GWAS},
+number = {5},
+pmid = {19492015},
+title = {{Designing genome-wide association studies: Sample size, power, imputation, and the choice of genotyping chip}},
+volume = {5},
+year = {2009}
+}
+
+@article{Lee2011,
+abstract = {Genome-wide association studies are designed to discover SNPs that are associated with a complex trait. Employing strict significance thresholds when testing individual SNPs avoids false positives at the expense of increasing false negatives. Recently, we developed a method for quantitative traits that estimates the variation accounted for when fitting all SNPs simultaneously. Here we develop this method further for case-control studies. We use a linear mixed model for analysis of binary traits and transform the estimates to a liability scale by adjusting both for scale and for ascertainment of the case samples. We show by theory and simulation that the method is unbiased. We apply the method to data from the Wellcome Trust Case Control Consortium and show that a substantial proportion of variation in liability for Crohn disease, bipolar disorder, and type I diabetes is tagged by common SNPs. ?? 2011 The American Society of Human Genetics.},
+author = {Lee, Sang Hong and Wray, Naomi R. and Goddard, Michael E. and Visscher, Peter M.},
+doi = {10.1016/j.ajhg.2011.02.002},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Lee et al. - 2011 - Estimating missing heritability for disease from genome-wide association studies.pdf:pdf},
+isbn = {1537-6605 (Electronic)$\backslash$n0002-9297 (Linking)},
+issn = {00029297},
+journal = {American Journal of Human Genetics},
+number = {3},
+pages = {294--305},
+pmid = {21376301},
+publisher = {The American Society of Human Genetics},
+title = {{Estimating missing heritability for disease from genome-wide association studies}},
+url = {http://dx.doi.org/10.1016/j.ajhg.2011.02.002},
+volume = {88},
+year = {2011}
+}
+
