additional section labels and a todo list added

--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -239,20 +239,19 @@ The inclusion of Oceanic populations in multi-population studies has had a focus
 
 Large population comparison studies have used Oceanic populations but analyses were limited to Melanesians and Papuan populations because of their inclusion in the Human Genome Diversity Project [@Cann2002]. The Melanesian and Papuan populations are often used to infer the genetics of Polynesian populations. This extrapolation doesn't take into account the current ancestry predictions of Polynesians populations being more closely related to Asian/Taiwanese Aboriginal populations than Melanesian groups, and the presence of European admixture [@Friedlaender2008]. The genomic DNA and mitochondrial DNA suggest Polynesians have East Asian ancestry, with a large male Melanesian admixture [@Kayser2008a]. There has been limited analyses of selection in Polynesian populations beyond @Kimura2008, where 24 Tongan samples in conjunction with other populations were analysed using both F~ST~ and a modified \gls{ehh} test. Regions with evidence of having been selected in the Tongans were potential candidates for increased fat, muscle and bone masses.
 
-### Gout and Metabolic Syndrome
+### Gout and Metabolic Syndrome {#goutMetSyn}
 
 The World Health Organisation has previously defined Metabolic Syndrome to be glucose intolerance, or diabetes mellitus, and or insulin resistance combined with at least two of the following: impaired glucose regulation or diabetes, insulin resistance, raised arterial pressure, raised plasma triglycerides or low HDL-cholesterol, central obesity, and microalbuminuria [@Alberti1998]. Hyperuricaemia can also be considered a component but is not required for the condition to be recognised. Hyperuricaemia is defined as a serum uric acid $\geq$ 0.42 mmol/L in males and $\geq$ 0.36 mmol/L in females [@Choi2007b]. There has been a slight revision and refinement in the criteria for a diagnosis of metabolic syndrome [@Alberti2009]. The requirement for diabetes mellitus and or  insulin resistance is no longer used, instead a requirement of having 3 of the 5 co-morbidities is used.
 
-Obesity is defined as a \gls{bmi} of >30 kg/m2 and is a contributing risk factor for many other diseases such as type II diabetes (T2D) and cardiovascular disease [@Haslam2005]. Obesity has been a key focus for research as the prevalence continues to increase and is posing a major threat to health systems in many countries [@Wang2011]. With respect to Polynesian populations obesity is a major problem with an obesity rate of 68%. New Zealand M\tex{\={a}}ori have an obesity prevalence of 48% [@Health2013]. From 2012 to 2013 the prevalence of obesity increased by 6% in Pacific populations. Heritability of \gls{bmi} ranges from 45% to 84% in twin studies [@Schousboe2003].
+Obesity is defined as a \gls{bmi} of >30 kg/m^2^ and is a contributing risk factor for many other diseases such as type II diabetes (T2D) and cardiovascular disease [@Haslam2005]. Obesity has been a key focus for research as the prevalence continues to increase and is posing a major threat to health systems in many countries [@Wang2011]. With respect to Polynesian populations obesity is a major problem with an obesity rate of 68%. New Zealand M\tex{\={a}}ori have an obesity prevalence of 48% [@Health2013]. From 2012 to 2013 the prevalence of obesity increased by 6% in Pacific populations. Heritability of \gls{bmi} ranges from 45% to 84% in twin studies [@Schousboe2003].
 
 Type II diabetes is diagnosed by a fasting blood glucose of >7.0 mmol/L or 2-hr post blood glucose load of  >11.1 mmol/L [@Alberti1998]. The risk of developing T2D is strongly correlated with excess weight [@Rana2007]. The prevalence of diabetes is 13% in Polynesians and 7% in NZ M\tex{\={a}}ori [@Health2013] compared to 5.5% in Europeans [@Winnard2013]. In New Zealand, the rate of diabetes is twice that in M\tex{\={a}}ori compared to non-M\tex{\={a}}ori, and the rate is 3.6 fold higher in Pacific compared to non-Pacific ethnicities. 
 
-There have been multiple loci associated with T2D [@Billings2010], however, @Chen2010 found no evidence for enrichment in selection for \gls{bmi}, but found significant enrichment for T2D. The genes associated with T2D have been found to be differentiated by population, however the individual \glspl{snp} are often not [@pickrell2009signals]. @Koh2014 identified 6 \glspl{snp} in or near 9 genes that had been reported as T2D associated and overlapped with evidence of positive selection in East Asian populations. Common variants that have been found in European populations associating with obesity don't replicate in the Samoan population [@Karns2012]. The non-replication of European variants in Polynesians and the high prevalence of obesity in Polynesians suggest there is likely to be 
-some population specific variants that are yet to be identified. Rare variants tend to be recent and therefore geographically restricted [@1KGP2012].
+There have been multiple loci associated with T2D [@Billings2010], however, @Chen2010 found no evidence for enrichment in selection for \gls{bmi}, but found significant enrichment for T2D. The genes associated with T2D have been found to be differentiated by population, however the individual \glspl{snp} are often not [@pickrell2009signals]. @Koh2014 identified six \glspl{snp} in or near nine genes that had been reported as T2D associated and overlapped with evidence of positive selection in East Asian populations. Common variants that have been found in European populations associating with obesity don't replicate in the Samoan population [@Karns2012]. The non-replication of European variants in Polynesians and the high prevalence of obesity in Polynesians suggest there is likely to be some population specific variants that are yet to be identified. Rare variants tend to be recent and therefore geographically restricted [@1KGP2012].
 
 Hyperuricaemia can be caused by diet, genetic predisposition or under-excretion of urate. The elevated uric acid levels in the blood contributes to the forming of urate crystals in the joints, triggering an inflammatory response by stimulating the synthesis and release of humoral and cellular inflammatory mediators [@Choi2005a]. There is a clear relationship between hyperuricaemia and the causal role in gout [@Snaith2004]. There is also an increased prevalence in gout in different ethnicities. New Zealand M\tex{\={a}}ori and Pacific ethnicities have a prevalence of 12% and 14% respectively in males, compared to 4% in both European and Asian males [@Winnard2012; @Winnard2013]. While New Zealand M\tex{\={a}}ori and Polynesians have an increased prevalence of hyperuricaemia, they also have a genetic predisposition to elevated urate and risk of gout  [@Hollis-Moffatt2009; @Hollis-Moffatt2011; @Phipps-Green2010]. The prevalence of metabolic syndrome in US gout patients is ~60%, or nearly 3 fold higher than US adults without gout [@Choi2007b].
 
-Variability in serum urate explained by the main urate loci _SLC2A9_ and _ABCG2_, expressed in the kidney, is 3.4%. Twenty six other loci associated with serum urate explain a further 3.6% of the variance [@Kottgen2013]. The heritability of serum uric acid ranging from 40 - 70% [@Nath2007; @Yang2005]. This difference in explained variability and total heritability leaves a large component yet to be explained. This missing heritability could be reduced through identifying additional variance attributed to non-additive effects.
+Variability in serum urate explained by the main urate loci _SLC2A9_ and _ABCG2_, expressed in the kidney, is 3.4%. Twenty six other loci associated with serum urate explain a further 3.6% of the variance [@Kottgen2013]. The heritability of serum uric acid ranges from 40 - 70% [@Nath2007; @Yang2005]. This difference in explained variability and total heritability leaves a large component yet to be explained. This missing heritability could be reduced through identifying additional variance attributed to non-additive effects.
 
 The benefits of urate are in line with the categories found to be enriched by selection in genome wide scans. Urate has an anti-oxidant in blood, acting to protect not just erythrocytes but also T and B lymphocites and macrophages [@Ames1981]. Urate has also been hypothesised to have had a survival advantage during the Miocene period, when a series of mutations in urate oxidase is thought to have occurred, leading to elevated urate. Hyperuricaemia enables blood pressure to be maintained under low salt dietary conditions [@Watanabe2002]. Later in life elevated serum urate is associated with increased cognitive function [@Euser2009]. Uric acid also activates the NLRP3 inflammasome which plays an important role in systemic infection and sepsis [@Opitz2009]. The role of urate in these situations show that while hyperuricaemia is now considered as contributing to disease, in the past it may have influenced longevity and survival, therefore increasing reproductive success and been a phenotype having undergone selection. 
 
@@ -297,6 +296,17 @@ F can be thought of as the normalised difference between the average number of s
 
 Uric acid is a by product of purine metabolism. 
 Inflammatory response is triggered when the monosodium urate crystals interact with the innate and adaptive immune response and result in the generation of IL-1 @Rock2013
+
+
+### things to update
+
+[] need some newer references eg cell paper about diving adapation, minster2017
+[] update to have the appropriate statistics that were actually used
+[] section about introgression?
+[] remove vgwas?
+[] zengs e
+[] cadzow2016 and minster2017 paper for metabolic selection in polynesian
+[]
 
 
 <!-- papers that have used empirical distribution: -->
