--- a/index.Rmd
+++ b/index.Rmd
@@ -8,6 +8,7 @@ output:
  bookdown::pdf_book 
 documentclass: report #book
 bibliography: ["references.bib", "diseaseGR-12-3-2018.bib"]
+#csl: chicago-author-date.csl
 biblio-style: otago
 link-citations: true
 description: "A thesis to fulfil the requirements for the Doctor of Philosophy"
