reset the glossary so when chapters are being looked at the abbreviations are clear

--- a/03-SelectionPipeline.Rmd
+++ b/03-SelectionPipeline.Rmd
@@ -1,5 +1,7 @@
 # Positive Selection in Polynesian Populations {#selectionResults}
 
+\glsresetall
+
 ```{r source, include = FALSE, echo = FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 library(phdFunctions)
